--- a/includes/libft/Makefile
+++ b/includes/libft/Makefile
@@ -6,7 +6,8 @@ SRCS		= 	ft_isalpha.c ft_isdigit.c ft_toupper.c ft_tolower.c \
 				ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c \
 				ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
 				ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
-				ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+				ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+				ft_utoa_base.c
 
 SRCS_BONUS	= 	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 				ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
